update instr manual with edits

--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -65,7 +65,7 @@ I have used these notes with classes ranging in size from six students to twenty
 
 The majority of students who enroll in this course are in a Mathematics (Secondary Teaching) major program. Usually, they are sophomores or juniors, and are still novices at finding and writing their own proofs. UNI has recently instituted a ``bridge course'' focused on proof writing, but this is not a pre-requisite for Euclidean Geometry, so previous experience is mixed. There are often transfer students who take both courses in their first semester at UNI. Most students recall that they once took a course labelled ``geometry'' in high school, but do not have much (any?) content knowledge remaining. Only occasionally do I see a student who has internalized the exploratory spirit of mathematical work before enrolling in the course.
 
-Though the students do not really know even the most basic geometry, I do not wish to insult them by telling them so. Nor do I wish to get bogged down in building planar geometry from a modern conception of a good axiomatic system like Hilbert's\cite{Hilbert}. I do want to give them a sense of history, and to get to at least a few really beautiful theorems. To meet all of these goals at once, I use Euclid's \emph{The Elements} as a text book. I have the students read the first four books, which gets through material on congruence of triangles and polygons, constructions (especially of regular figures), properties of circles, and area. We must stop short of discussing similarity of figures.
+Though the students do not really know even the most basic geometry, I do not wish to insult them by telling them so. Nor do I wish to get bogged down in building planar geometry from a modern conception of a good axiomatic system like Hilbert's\cite{Hilbert}. I do want to give them a sense of history, and to get to at least a few really beautiful theorems. To meet all of these goals at once, I use Euclid's \emph{The Elements}\cite{Euclid} as a text book. I have the students read the first four books, which gets through material on congruence of triangles and polygons, constructions (especially of regular figures), properties of circles, and area. We must stop short of discussing similarity of figures.
 
 The main goal of the course is to get the students working the same way that mathematicians do. This includes the process of finding, presenting, and writing rigorous arguments, but goes further. It is important to me that the students also work at other mathematical sense-making tasks: making definitions of unclear concepts, exploring examples, formulating conjectures and questions in precise mathematical language, and critiquing the work of others both for correctness and for clarity. 
 
@@ -191,7 +191,7 @@ An example exam is at the end of this guide.
 Third, I schedule \emph{Assessment Interviews} with my students at three different times during the semester. I like to have these during weeks three, seven, and eleven. Each meeting is a twenty minute appointment where I can talk with a student one-on-one about their course progress. To give the conversations some focus, I ask the students to do a one page \emph{reflective writing assignment} before the meeting.
 In the first meeting I mostly try to take away student anxiety about the nature of the course by being personable and getting to know them a little. I also give advice about work habits and encourage them to come back to talk about mathematics or their progress whenever they wish. In the second meeting students start asking about their progress more directly, and I often give advice about what skills to work on next. In the third meeting students usually take the opportunity to ask about grades specifically. In this way, I can address their concerns and share frank assessments in a private discussion.
 
-In the end, a student who earns an A usually solves eight to ten tasks, including some difficult ones. A student who earns a C usually solves three tasks, all of low difficulty.
+In the end, a student who earns an A usually solves eight to ten tasks, including some difficult ones. A student who earns a C usually solves three tasks, all of low difficulty. I tell the students that a task only counts as complete if the paper has been published in the class journal.
 
 \subsection{Class Materials}
 
@@ -238,7 +238,11 @@ I always stick to using last names in class. Students are ``Mr. Smith'' and ``Ms
 
 Of course, my students are mostly ``Iowa Nice,'' and my biggest challenge is not polite behavior. Rather, I have to encourage my students to ask tough questions and to admit confusion publicly.
 
+I hand out the tasks one section at a time. The tasks in section one get distributed at the end of the first day. Section two usually goes out during the second week. I usually distribute a new section when there are only two remaining open tasks at the end of a meeting, though later in the term that number will be larger. The idea is to give the students enough to work on to stay busy, but to have the class mostly working on one small set of related problems, so they are all thinking about the same ideas.
+
 My class does not usually finish all of these tasks. Most semesters the students are working hard on sections 14 or 15 as class ends, with about ten unfinished items from earlier in the term hanging around.
+
+No result from this course is as important as the process of getting all the students engaged in the process of mathematical work. I gladly sacrifice the end of the task sequence to engage the students in ``making mathematics.'' Running my class meetings are a bit like playing jazz: we have a basic structure, but it is there just to give us a place to explore ideas and seek beautiful moments.\footnote{I thank Stan Yoshinobu for sharing this metaphor in a different, but related, context.} The students ideas are more important than the tasks I have designed.
 
 I find the best learning results from respecting the students and their ideas. When I follow their lead and help them develop their own arguments, students can be spectacularly creative. It is common for me to be surprised by a new (to me)  and correct argument for a challenging theorem. I want to be mentor, cheerleader, and coach, and I must sometimes play counselor. I want to avoid being ``the smart guy in the room.''
 
@@ -433,7 +437,7 @@ Pairs of opposite angles in a kite are congruent.
 
 This is false. Rather, it is only partially true. A simple argument with congruent triangles will establish that one pair of opposite sides in a kite is always congruent. The other pair need not be. 
 
-Students often have trouble stating their result precisely, and this should lead to a conversation about setting up notation and using it as a vehicle for clarity. After some attempts to state which pair of angles are congruent using natural language descriptions, students can appreciate the power and utility of naming the vertices of the kite and stating things in those terms. If notation doesn't magically appear, I usually ask the students to do a 2 minute writing exercise for a "good version" of the statement. Then I pair them up to critique for 2 minutes, and then we have a class discussion starting from their work. ("Please share an example where your partner's work is good.") If we move briskly, this is a well-spent 10 minutes.
+Students often have trouble stating their result precisely, and this should lead to a conversation about setting up notation and using it as a vehicle for clarity. After some attempts to state which pair of angles are congruent using natural language descriptions, students can appreciate the power and utility of naming the vertices of the kite and stating things in those terms. If notation doesn't magically appear, I usually ask the students to do a two minute writing exercise for a "good version" of the statement. Then I pair them up to critique for two minutes, and then we have a class discussion starting from their work. ("Please share an example where your partner's work is good.") If we move briskly, this is a well-spent ten minutes.
 
 The other conversation that comes up here is about how to prove something is false. Given the work on Conjecture 1.1, this is a chance to remind them about how counterexamples work: give an explicit construction of the example and prove it has the properties required. I do not always have this conversation in this exact spot, just to keep things moving.
 
