edits to instructors_manual.tex

--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -31,7 +31,7 @@
 %%%%%
 
 
-\title{Euclidean Geometry: Instructor's Manual}
+\title{Euclidean Geometry:\\ An Introduction to Mathematical Work}
 \author[Hitchman]{Theron J Hitchman}
 \date{Spring 2016} 
 
