updates to instr manual

--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -170,7 +170,7 @@ The most important assessment mechanism in my course is the collection of daily 
 
 So I have devised another system on top of merely watching and interacting that provides for more formal communication with students about their progress. 
 
-First, I share with the students a list of \emph{Standards for Assessment}. These are a public declaration of the kinds of things I will be looking at during the course.
+First, I share with the students a list of \emph{Standards for Assessment}. These are a public declaration of the kinds of things I will be looking at during the course. I have included a copy of this as an appendix.
 
 Second, I give \emph{one midterm examination} and \emph{a final exam}.
 The midterm examination is in-class, and must be very focused.
@@ -224,13 +224,12 @@ My particular web page is open on the internet, though it is secured by its obsc
 As part of the basic structure of the course, I run a class journal.\footnote{I have written about this elsewhere. It is to appear as \cite{MAANOTES}.}
 A student who completes a task to the satisfaction of the class then is charged with writing up the result for publication. 
 
-I provide the students with a \LaTeX\ template and lots of written guidelines for preparing their papers. They submit papers to me (as the managing editor) through a dedicated email address. Each paper goes through a review and revision cycle as many times as required to get it into a reasonable shape. At first, I play the role of referee and write up little referee reports for each paper. I play referee for each student's first two papers. Later in the term, I ask the students who have two or more published papers to help out and play referee. Again, I provide the students with lots of written guidelines for being a referee. If things are going well, I often turn over the refereeing completely by week ten or eleven. 
+I provide the students with a \LaTeX\ template and guidelines for preparing their papers. They submit papers to me (as the managing editor) through a dedicated email address. Each paper goes through a review and revision cycle as many times as required to get it into a reasonable shape. At first, I play the role of referee and write up little referee reports for each paper. I play referee for each student's first two papers. Later in the term, I ask the students who have two or more published papers to help out and play referee. Again, I provide the students with guidelines for being a referee. If things are going well, I often turn over the refereeing completely by week ten or eleven. 
 
 The whole process has to be explained to the class two or three times for everyone to get the big picture. I find it helps to explain that this is how professionals do it, too, and why it is important.
 
 Every few weeks, I bundle together those papers which are finished and make an issue of the class journal to publish. One copy goes on the course web site as an electronic document. I make paper copies for those authors with a paper appearing and distribute them at the start of the next meeting.
 
-I have included several of the documents I use in the appendices.
 
 \subsection{Other Advice, in No Particular Order}
 
