update jiblm ver thru sect 2

--- a/hitchman_euclidean_geometry_jiblm.tex
+++ b/hitchman_euclidean_geometry_jiblm.tex
@@ -749,6 +749,13 @@ Feel free to add hypotheses when the need arises.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{The Geometry of Kites}
 
+\begin{annotation}
+{
+\color{blue}
+This section of the tasks is designed to get students thinking about pushing their techniques, but being watchful for what is really true. Each of the statements here is an attempted generalization of a statement the students will have already considered for rhombi. 
+}
+\end{annotation}
+
 Now we turn our attention to a different special class of quadrilaterals: \emph{kites}.
 
 \begin{definition}\label{defn:quad-sides-type}
@@ -764,6 +771,20 @@ A \emph{kite} is a quadrilateral with two pairs of adjacent and congruent sides.
 Notice that a rhombus is always a kite.\footnote{This is a theorem (and its proof). Can you write it out so it looks like a formal theorem statment?}
 The reason is that if all four sides are mutually congruent, then we can pick any way we like to divide the sides into adjacent pairs (there are only two ways), and these pairs will consist of congruent sides.
 
+\begin{annotation}
+{
+\color{blue}
+Note that this definition would actually allow a figure with a set of three congruent sides. (My thanks to the referee who pointed it out.) No student in my course has, yet, noticed this. If it were to happen, I would make it another example of letting the students alter the official definition to suit their needs, sorting out the possible resolutions through experiment and conversation until we reach consensus as a class.
+
+It is my experience that students will not initially consider a non-convex kite. My classes will show up the first meeting after these tasks have been distributed claiming to have finished all of them, but they will have errors from not having a broad enough imagination. I suppose the word ``kite'' 
+evokes the idea of the traditional toy so strongly that they cannot see past it.
+These tasks are partly designed to encourage the students to see that convexity is an issue.
+Their arguments will often work just fine if the kites under consideration are ``like this,'' and not ``like that.'' In this way, we build the need for a new word and a clear definition of what counts as ``this'' and ``that.''
+I avoid mentioning the word convex until after the students have expressed a need for the concept. In this setting, my students usually come up with a other language for particular examples (like a ``dart'' or a ``Star Trek kite''). We then set some class conjectures around sorting out the resulting mess.
+}
+\end{annotation}
+
+
 Sometimes a proof has features that can be carried over to other situations.
 In this assignment, you should try to build on the ideas we have developed in studying rhombi in this new situation.
 Each of the below is an adaptation of a statement we have for rhombi.
@@ -772,24 +793,67 @@ Each of the below is an adaptation of a statement we have for rhombi.
 Pairs of opposite angles in a kite are congruent.
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+This is false. Rather, it is only partially true. A simple argument with congruent triangles will establish that one pair of opposite sides in a kite is always congruent. The other pair need not be. 
+
+Students often have trouble stating their result precisely, and this should lead to a conversation about setting up notation and using it as a vehicle for clarity. After some attempts to state which pair of angles are congruent using natural language descriptions, students can appreciate the power and utility of naming the vertices of the kite and stating things in those terms. If notation doesn't magically appear, I usually ask the students to do a two minute writing exercise for a "good version" of the statement. Then I pair them up to critique for two minutes, and then we have a class discussion starting from their work. ("Please share an example where your partner's work is good.") If we move briskly, this is a well-spent ten minutes.
+
+The other conversation that comes up here is about how to prove something is false. Given the work on Conjecture 1.1, this is a chance to remind them about how counterexamples work: give an explicit construction of the example and prove it has the properties required. I do not always have this conversation in this exact spot, just to keep things moving.
+}
+\end{annotation}
+
 \begin{conjecture}\label{conj:kite-diagonals-cross}
 The diagonals of a kite must cross.
 \end{conjecture}
+
+\begin{annotation}
+{
+\color{blue}
+Again, this is false, but it requires the students to imagine a non-convex figure. The conversation about counterexamples should come up here if it has not already.
+}
+\end{annotation}
 
 \begin{problem}\label{prob:construct-kites}
 Give a construction (with proof) of a kite.
 How general is your construction?
 \end{problem}
 
+\begin{annotation}
+{
+\color{blue}
+There is lots of room to work in this task. A student may or may not give the most general construction possible. I use this as an opportunity to have students ask questions and make conjectures about how flexible or free this construction is. It is not hard to get three or four interesting questions out of this. I add these to the task sequence immediately. Given the time to think about it in a brainstorming session, it is possible to get a conjecture along the lines of ``Given two segments and an angle, it is possible to construct a kite having the given segments as sides and the given angle between those sides." I have had classes state it as "Given a rhombus ABCD, it is possible to make choices in Ms. Y's construction to construct a rhombus congruent to ABCD."
+}
+\end{annotation}
+
+
 \begin{conjecture}\label{conj:kite-is-parallelogram}
 If $ABCD$ is a kite, then it is a parallelogram.
 \end{conjecture}
+
+\begin{annotation}
+{
+\color{blue}
+Again, this is false. Sometimes, students will approach this one in a non-constructive way, proving a statement like ``If ABCD is a kite and a parallelogram, then it is rhombus,'' taking it as a given that there exists a kite which is not a rhombus. Depending on the resolution of the 
+previous items, they may already know that.
+
+}
+\end{annotation}
 
 \begin{conjecture}\label{conj:kite-diagonals-perpendicular}
 If the diagonals of a kite meet, then they meet at a right angle.
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+This leads to some good productive confusion. Expect students to have a disagreement about what is meant by the word ``diagonal.'' Some will think of it as a segment, and others will think of it as a line. I let the students have a conversation to sort it out. If they choose to change the definition to something different from that written in the tasks, I ask that they go back through their work and see what damage they may have wrought on previous work.
 
+Many students will be confused by the need for the hypothesis, since it relates to convexity. In some classes, it is not until this point that students recognize that they need to consider such figures, and they have to go back and revise all of the work they have done on the other tasks in this section. 
+There is a potential danger here: it would be a bad situation to have a week's worth of work somehow ``invalidated.'' Student morale would certainly suffer. But, as mentioned above, my students typically bring all of these tasks to one meeting and we find out things are not quite right before that day is out. 
+}
+\end{annotation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{The Geometry of Rectangles}\label{section:rectangles}
